src/objects/MICO_Planning_Poker_Session_User__c.object
<CustomObject>
    <description>Business Description: This object is used as part of the user story estimation process

Used In: Mission Control App</description>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if a player is in a session or not</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true for leader of every session.</description>
        <label>Session Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planning_Poker_Session__c</fullName>
        <label>Planning Poker Session</label>
        <referenceTo>MICO_Planning_Poker_Session__c</referenceTo>
        <relationshipLabel>Planning Poker Session</relationshipLabel>
        <relationshipName>MICO_Planning_Poker_Session_Users1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>User__r.FirstName + &apos; &apos; +  User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MICO_Planning_Poker_Session_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Planning Poker Session User</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planning Poker Session Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>